fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ margin: 0;
   }
 
   .newsfeed {
+    display:block;
     height: 110%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
